<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go And Droid</string>
    <string name="homeNewGame">New Game</string>
    <string name="homeMyGames">My Games</string>
    <string name="homeProblems">Problems</string>
    <string name="newGameBoardSize">Board Size</string>
    <string name="newGameStart">Start Game</string>
    <string name="newGameBlack">Black</string>
    <string name="newGameWhite">White</string>
    <string name="newGameRightArrow">></string>
    <string name="newGameKomi">Komi</string>
    <string name="newGameBlackName">Black Name</string>
    <string name="newGameWhiteName">White Namer</string>
    <string name="newGameHandicap">Handicap</string>
    <string name="boardPrevButton">&lt;</string>
    <string name="boardNextButton">></string>
    <string name="boardEndButton">>|</string>
    <string name="boardBeginButton">|&lt;</string>

    <color name="blackStoneColor">@android:color/black</color>
    <color name="blackStoneHighlightColor">#BCBCBC</color>
    <color name="whiteStoneColor">@android:color/white</color>
    <color name="whiteStoneHighlightColor">#BCBCBC</color>
    <string name="sync">Sync</string>

</resources>