<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/boardWhiteImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:src="@drawable/whitestone" />

        <TextView
            android:id="@+id/boardWhitePlayerText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:text="White Player"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/boardBlackPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="right|center_vertical"
            android:text="Black Player"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/boardBlackImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:src="@drawable/blackstone" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/boardCommentary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T\ne\nx\nt\nV\ni\ne\nw\n t\ne\ns\nt\n d\ne\nd\ne\n k\ni\nk\no\n\no\n lol" />
    </ScrollView>

    <org.beroot.android.BoardView
        android:id="@+id/boardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/boardBeginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boardBeginButton" />

        <Button
            android:id="@+id/boardPrevButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boardPrevButton" />

        <Button
            android:id="@+id/boardNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boardNextButton" />

        <Button
            android:id="@+id/boardEndButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boardEndButton" />
    </LinearLayout>

</LinearLayout>